--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="wrapper">
       <header>
         <h1>Michael Bartoli</h1>
-        <p></p>
+        <p>Student @ Pomona College</p>
+        <p>Researcher @ Keck Graduate Insitute</p>
+        <p>Data Scientist @ Dose Analytics</p>
 
 
         <p class="view"><a href="https://github.com/mbartoli">View My GitHub Profile</a></p>
