--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>About me</h3>
-     
+        <h3>About me</h3></ br>
+        I do research in machine learning, computational social science, and distributed systems.  </ br>
+        <h3>Talks</h3></ br>
+        Driving Pharmaceutical Product Design with Big Data Intelligence </ br>
+
+      
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
