--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 
       </header>
       <section>
-        <h3>About me</h3></ br>
-        I do research in machine learning, computational social science, and distributed systems.  </ br>
-        <h3>Talks</h3></ br>
-        Driving Pharmaceutical Product Design with Big Data Intelligence </ br>
-
+        <h3>About me</h3>
+        <p>
+          I do research in machine learning, computational social science, and distributed systems.
+        </p>
+        <h3>Talks</h3>
+        <p>
+          Driving Pharmaceutical Product Design with Big Data Intelligence </ br>
+        </p>
       
       </section>
       <footer>
