--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h3>Talks</h3>
         <p>
           Driving Pharmaceutical Product Design with Big Data Intelligence </ br>
+          Scalable Learning on United States Patent Data
         </p>
       
       </section>
