--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </p>
         <h3>Talks</h3>
         <p>
-          Driving Pharmaceutical Product Design with Big Data Intelligence </ br>
-          Scalable Learning on United States Patent Data
+          Scalable Learning on United States Patent Data <br>
+          Driving Pharmaceutical Product Design with Big Data Intelligence <br>
+          
         </p>
       
       </section>
