--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       </header>
       <section>
-        <h3>About me</h3>
+        <h3>About me</h3> 
         <p>
           I do research in machine learning, computational social science, and distributed systems.
-        </p>
+        </p><br> 
         <h3>Talks</h3>
         <p>
           Scalable Learning on United States Patent Data <br>
@@ -37,7 +37,7 @@
           Social Media Data Mining for Patient Insight on Pharmaceutical Product Design <br>
           Can tweets influence Big Pharma? Exploring social media with linguistic and machine learning algorithms <br>
           Applying Supervised Machine Learning-Based Models to TFA Corps Selection <br>
-          ”Speak the Speech, I Pray You:” Working on Oral Presentations in the Writing Center <br>
+          <p>”Speak the Speech, I Pray You:” Working on Oral Presentations in the Writing Center </p>
           Implementing Analytics in the Writing Center <br>
           
           
