--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Michael Bartoli</h1>
         <p>Studying CS at Pomona</p>
         <p>Doing research at KGI</p>
-        <p>Working at Dose Analtyics</p>
+        <p>Working at Dose Analytics</p>
 
 
         
