--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         <h3>Projects</h3>
         <p>
-        Bitmasque, amazon incognitio. <br>
+        Invisibit, amazon incognitio. <br>
         Game Away, a social gaming network. <br>
         Heart Attack, pentesting tool for the heartbleed vulnerability. <br>
         Re.focus, chrome designed for investigation.  <br>
