--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         
         <h3>Talks</h3>
         <p>
+          Writing across the disciplines: how can we cater to writing in the sciences?  <br>
           Scalable Learning on United States Patent Data. <br>
           Driving Pharmaceutical Product Design with Big Data Intelligence. <br>
           Data Mining at Eli-Lilly. <br>
