--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         
         <h3>Projects</h3>
         <p>
+        RT-Classification, sentiment analysis on the Rotten Tomatoes corpus. <br>
         Invisibit, amazon incognitio. <br>
         Game Away, a social gaming network. <br>
         Heart Attack, pentesting tool for the heartbleed vulnerability. <br>
