--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         
         <h3>Projects</h3>
         <p>
+        Neural Machine Translation, english-french MT using RNNs <br> 
         RT-Classification, sentiment analysis on the Rotten Tomatoes corpus. <br>
         Invisibit, amazon incognitio. <br>
         Game Away, a social gaming network. <br>
