--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>Michael Bartoli</h1>
         <p>Studying at Pomona</p>
+        <p>Data Science at L3 Data Tactics and DARPA</p>
 
 
         
