--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Michael Bartoli</h1>
         <p>Computer Science at Pomona College</p>
-        <p>Data R&amp;D Intern at L3 and DARPA</p>
+        <p>Data Science Intern at L3 and DARPA</p>
 
 
         
@@ -33,7 +33,7 @@
         
         <h3>Talks</h3>
         <p>
-          Applying Supervised Machine Learning to Recruiting Processes
+          Applying Supervised Machine Learning to Recruiting Processes <br>
           Writing across the disciplines: how can we cater to writing in the sciences?  <br>
           Scalable Learning on United States Patent Data. <br>
           Driving Pharmaceutical Product Design with Big Data Intelligence. <br>
